tests/ui/feature-gates/feature-gate-try_blocks.stderr
error[E0658]: `try` expression is experimental
  --> $DIR/feature-gate-try_blocks.rs:4:33
   |
LL |       let try_result: Option<_> = try {
   |  _________________________________^
LL | |         let x = 5;
LL | |         x
LL | |     };
   | |_____^
   |
   = note: see issue #31436 <https://github.com/rust-lang/rust/issues/31436> for more information
   = help: add `#![feature(try_blocks)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
